# MINDRUSH

./: Cargo.toml  README.md
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs  state.rs
src-tauri/src/application/commands/: config.rs  epub.rs  history.rs  md.rs  mod.rs  pdf.rs  translate.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/entity/: cache_item.rs  language.rs  mod.rs  task.rs
src-tauri/src/domain/service/: mod.rs
src-tauri/src/domain/value_object/: mod.rs  translation_result.rs  validation_result.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/cache/: memory_cache.rs  mod.rs
src-tauri/src/infrastructure/llm/: anthropic.rs  factory.rs  mod.rs  openai.rs  provider.rs
src-tauri/src/infrastructure/text_processor/: mod.rs  processor.rs
